--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase-admin": "^11.0.1",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.22.0",
